--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,26 @@
                     <finalName>Usuarios-PSS</finalName>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <id>deployJBoss</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <tasks>
+                                <copy file="config.ini"
+                                        todir="${project.build.directory}/dist"/>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
